code/dotnet/FixedIncomeCalculation/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Fixed Income Calculation client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.FixedIncomeCalculation)](https://www.nuget.org/packages/FactSet.SDK.FixedIncomeCalculation)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- Package version: 0.9.2
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FixedIncomeCalculation -v 0.9.2
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FixedIncomeCalculation -Version 0.9.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FixedIncomeCalculation.Api;
using FactSet.SDK.FixedIncomeCalculation.Client;
using FactSet.SDK.FixedIncomeCalculation.Model;

namespace Example
{
    public static class CancelFICalculationByIdExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FixedIncomeCalculation.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FICalculationsApi(config);
            var id = "id_example";  // string | from url, provided from the location header in the Run FI Calculation endpoint

            try
            {
                // Cancel FI calculation by id
                apiInstance.CancelFICalculationById(id);
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FICalculationsApi.CancelFICalculationById: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FICalculationsApi* | [**CancelFICalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#cancelficalculationbyid) | **DELETE** /analytics/engines/fi/v1/calculations/{id} | Cancel FI calculation by id
*FICalculationsApi* | [**GetFICalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#getficalculationbyid) | **GET** /analytics/engines/fi/v1/calculations/{id} | Get FI calculation by id
*FICalculationsApi* | [**RunFICalculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#runficalculation) | **POST** /analytics/engines/fi/v1/calculations | Run FI calculation


## Documentation for Models

 - [Model.FICalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FICalculationParameters.md)
 - [Model.FIJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FIJobSettings.md)
 - [Model.FISecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v1/docs/FISecurity.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
