code/dotnet/FixedIncomeCalculation/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Fixed Income Calculation client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.12.0-blue)](https://developer.factset.com/api-catalog/fixed-income-calculation-api)
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.FixedIncomeCalculation)](https://www.nuget.org/packages/FactSet.SDK.FixedIncomeCalculation)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.12.0
- SDK version: 1.1.1
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FixedIncomeCalculation -v 1.1.1
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FixedIncomeCalculation -Version 1.1.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FixedIncomeCalculation.Api;
using FactSet.SDK.FixedIncomeCalculation.Client;
using FactSet.SDK.FixedIncomeCalculation.Model;

namespace Example
{
    public static class GetAllFIDiscountCurvesExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FixedIncomeCalculation.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new DiscountCurvesApi(config);
            var currency = "currency_example";  // string |  (optional) 

            try
            {
                // Get Discount Curves
                FIDiscountCurveInfoRoot result = apiInstance.GetAllFIDiscountCurves(currency);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling DiscountCurvesApi.GetAllFIDiscountCurves: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DiscountCurvesApi* | [**GetAllFIDiscountCurves**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/DiscountCurvesApi.md#getallfidiscountcurves) | **GET** /analytics/engines/fi/v3/discount-curves | Get Discount Curves
*FICalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/fi/v3/calculations/{id} | Cancel FI calculation by id
*FICalculationsApi* | [**GetCalculationParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#getcalculationparameters) | **GET** /analytics/engines/fi/v3/calculations/{id} | Get FI calculation parameters by id
*FICalculationsApi* | [**GetCalculationResult**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#getcalculationresult) | **GET** /analytics/engines/fi/v3/calculations/{id}/result | Get FI calculation result by id
*FICalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/fi/v3/calculations/{id}/status | Get FI calculation status by id
*FICalculationsApi* | [**PostAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#postandcalculate) | **POST** /analytics/engines/fi/v3/calculations | Create and Run FI calculation
*FICalculationsApi* | [**PutAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#putandcalculate) | **PUT** /analytics/engines/fi/v3/calculations/{id} | Create or Update FI calculation and run it.


## Documentation for Models

 - [Model.CalculationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/CalculationInfo.md)
 - [Model.CalculationInfoRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/CalculationInfoRoot.md)
 - [Model.CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/CalculationMeta.md)
 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/ClientErrorResponse.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/ErrorSource.md)
 - [Model.FIAttributionForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIAttributionForJobSettings.md)
 - [Model.FIAttributionForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIAttributionForSecurities.md)
 - [Model.FIBalloonExtension](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIBalloonExtension.md)
 - [Model.FIBankLoans](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIBankLoans.md)
 - [Model.FICalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationParameters.md)
 - [Model.FICalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICalculationParametersRoot.md)
 - [Model.FICashflows](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FICashflows.md)
 - [Model.FIConvertibleSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIConvertibleSettings.md)
 - [Model.FIDiscountCurveInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIDiscountCurveInfo.md)
 - [Model.FIDiscountCurveInfoRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIDiscountCurveInfoRoot.md)
 - [Model.FIJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIJobSettings.md)
 - [Model.FILoss](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FILoss.md)
 - [Model.FIMarketEnvironment](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIMarketEnvironment.md)
 - [Model.FIMunicipalBonds](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIMunicipalBonds.md)
 - [Model.FIMunicipalBondsForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIMunicipalBondsForJobSettings.md)
 - [Model.FIPrepay](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIPrepay.md)
 - [Model.FIPrepayLockout](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIPrepayLockout.md)
 - [Model.FIReferencePrepay](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIReferencePrepay.md)
 - [Model.FIReferenceSecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIReferenceSecurity.md)
 - [Model.FISecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FISecurity.md)
 - [Model.FIServicerAdvances](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIServicerAdvances.md)
 - [Model.FIServicerAdvancesForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIServicerAdvancesForSecurities.md)
 - [Model.FIStructuredProductsForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIStructuredProductsForJobSettings.md)
 - [Model.FIStructuredProductsForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/FIStructuredProductsForSecurities.md)
 - [Model.ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FixedIncomeCalculation/v3/docs/ObjectRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
